RESOLVED FIXED105515
[chromium] fix stray printf in TestRunner's WebTestProxy
https://bugs.webkit.org/show_bug.cgi?id=105515
Summary [chromium] fix stray printf in TestRunner's WebTestProxy
jochen
Reported 2012-12-20 02:03:14 PST
[chromium] fix stray printf in TestRunner's WebTestProxy
Attachments
Patch (1.50 KB, patch)
2012-12-20 02:03 PST, jochen
no flags
jochen
Comment 1 2012-12-20 02:03:35 PST
WebKit Review Bot
Comment 2 2012-12-20 02:40:49 PST
Comment on attachment 180304 [details] Patch Clearing flags on attachment: 180304 Committed r138239: <http://trac.webkit.org/changeset/138239>
WebKit Review Bot
Comment 3 2012-12-20 02:40:52 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.