[chromium] fix stray printf in TestRunner's WebTestProxy https://bugs.webkit.org/show_bug.cgi?id=105515

Reviewed by Ryosuke Niwa.

* DumpRenderTree/chromium/TestRunner/src/WebTestProxy.cpp:
(WebTestRunner::WebTestProxyBase::shouldInsertNode):


Canonical link: https://commits.webkit.org/123729@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138239 268f45cc-cd09-0410-ab3c-d52691b4dbfc